fixed lang attribute

--- a/css/layout.css
+++ b/css/layout.css
@@ -13,11 +13,7 @@
     clear: both;
 }
 
-.cf {
-    *zoom: 1;
-}
-
-.ba-container-center {
+.ba-container,.ba-container-center {
     margin-left: auto;
     margin-right: auto;
 }
@@ -122,10 +118,6 @@ img {
 
 .ba-grid:after {
     clear: both;
-}
-
-.ba-grid {
-    *zoom: 1;
 }
 
 .ba-grid + .ba-grid {
