--- a/css/layout.css
+++ b/css/layout.css
@@ -110,3 +110,291 @@ img {
 
 
 /* Grid clearfix */
+
+.ba-grid:before, .ba-grid:after {
+    content: " ";
+    display: table;
+}
+
+.ba-grid:after {
+    clear: both;
+}
+
+.ba-grid + .ba-grid {
+    margin-top: 20px;
+}
+
+[class*="ba-width-"] {
+    width: 100%;
+}
+
+.ba-grid > [class*="ba-width-"] {
+    float: left;
+    padding-left: 20px;
+}
+
+.ba-grid {
+    margin-left: -20px;
+}
+
+
+/* No Padding Grid */
+
+.ba-grid-nopad {
+    margin-left: 0;
+}
+.ba-grid-nopad + .ba-grid-nopad {
+    margin-top: 0;
+}
+.ba-grid-nopad > [class*="ba-width-"] {
+    padding-left: 0;
+}
+
+.ba-width-1-2, .ba-width-2-4, .ba-width-3-6 {
+    width: 50%;
+}
+
+.ba-width-1-3, .ba-width-2-6 {
+    width: 33.333%;
+}
+
+.ba-width-2-3, .ba-width-4-6 {
+    width: 66.667%;
+}
+
+.ba-width-1-4 {
+    width: 25%;
+}
+
+.ba-width-3-4 {
+    width: 75%;
+}
+
+.ba-width-1-5 {
+    width: 20%;
+}
+
+.ba-width-2-5 {
+    width: 40%;
+}
+
+.ba-width-3-5 {
+    width: 60%;
+}
+
+.ba-width-4-5 {
+    width: 80%;
+}
+
+.ba-width-1-6 {
+    width: 16.667%;
+}
+
+.ba-width-5-6 {
+    width: 83.333%;
+}
+
+.ba-width-1-7 {
+    width: 14.2857%;
+}
+
+.ba-width-1-8 {
+    width: 12.5%;
+}
+
+.ba-width-1-9 {
+    width: 11.1111%;
+}
+
+.ba-width-1-10 {
+    width: 10%;
+}
+
+
+/* Phone landscape and bigger */
+
+@media (min-width: 480px) {
+    .ba-float-left-small {
+        float: left;
+    }
+
+    .ba-float-right-small {
+        float: right;
+    }
+    /* Whole */
+    .ba-width-small-1-1 {
+        width: 100%;
+    }
+    /* Halves */
+    .ba-width-small-1-2, .ba-width-small-2-4, .ba-width-small-3-6 {
+        width: 50%;
+    }
+    /* Thirds */
+    .ba-width-small-1-3, .ba-width-small-2-6 {
+        width: 33.333%;
+    }
+    .ba-width-small-2-3, .ba-width-small-4-6 {
+        width: 66.666%;
+    }
+    /* Quarters */
+    .ba-width-small-1-4 {
+        width: 25%;
+    }
+    .ba-width-small-3-4 {
+        width: 75%;
+    }
+    /* Fifths */
+    .ba-width-small-1-5 {
+        width: 20%;
+    }
+    .ba-width-small-2-5 {
+        width: 40%;
+    }
+    .ba-width-small-3-5 {
+        width: 60%;
+    }
+    .ba-width-small-4-5 {
+        width: 80%;
+    }
+}
+
+
+/* Tablet and bigger */
+
+@media (min-width: 768px) {
+    .ba-float-left-medium {
+        float: left;
+    }
+    .ba-float-right-medium {
+        float: right;
+    }
+
+    /* Whole */
+    .ba-width-medium-1-1 {
+        width: 100%;
+    }
+    /* Halves */
+    .ba-width-medium-1-2, .ba-width-medium-2-4, .ba-width-medium-3-6 {
+        width: 50%;
+    }
+    /* Thirds */
+    .ba-width-medium-1-3, .ba-width-medium-2-6 {
+        width: 33.333%;
+    }
+    .ba-width-medium-2-3, .ba-width-medium-4-6 {
+        width: 66.666%;
+    }
+    /* Quarters */
+    .ba-width-medium-1-4 {
+        width: 25%;
+    }
+    .ba-width-medium-3-4 {
+        width: 75%;
+    }
+    /* Fifths */
+    .ba-width-medium-1-5 {
+        width: 20%;
+    }
+    .ba-width-medium-2-5 {
+        width: 40%;
+    }
+    .ba-width-medium-3-5 {
+        width: 60%;
+    }
+    .ba-width-medium-4-5 {
+        width: 80%;
+    }
+}
+
+
+/* Desktop and bigger */
+
+@media (min-width: 960px) {
+    .ba-float-left-large {
+        float: left;
+    }
+
+    .ba-float-right-large {
+        float: right;
+    }
+    /* Whole */
+    .ba-width-large-1-1 {
+        width: 100%;
+    }
+    /* Halves */
+    .ba-width-large-1-2, .ba-width-large-2-4, .ba-width-large-3-6 {
+        width: 50%;
+    }
+    /* Thirds */
+    .ba-width-large-1-3, .ba-width-large-2-6 {
+        width: 33.333%;
+    }
+    .ba-width-large-2-3, .ba-width-large-4-6 {
+        width: 66.666%;
+    }
+    /* Quarters */
+    .ba-width-large-1-4 {
+        width: 25%;
+    }
+    .ba-width-large-3-4 {
+        width: 75%;
+    }
+    /* Fifths */
+    .ba-width-large-1-5 {
+        width: 20%;
+    }
+    .ba-width-large-2-5 {
+        width: 40%;
+    }
+    .ba-width-large-3-5 {
+        width: 60%;
+    }
+    .ba-width-large-4-5 {
+        width: 80%;
+    }
+}
+
+@media (min-width: 1220px) {
+    .ba-float-left-xlarge {
+        float: left;
+    }
+
+    .ba-float-right-xlarge {
+        float: right;
+    }
+    /* Whole */
+    .ba-width-xlarge-1-1 {
+        width: 100%;
+    }
+    /* Halves */
+    .ba-width-xlarge-1-2, .ba-width-xlarge-2-4, .ba-width-xlarge-3-6 {
+        width: 50%;
+    }
+    /* Thirds */
+    .ba-width-xlarge-1-3, .ba-width-xlarge-2-6 {
+        width: 33.333%;
+    }
+    .ba-width-xlarge-2-3, .ba-width-xlarge-4-6 {
+        width: 66.666%;
+    }
+    /* Quarters */
+    .ba-width-xlarge-1-4 {
+        width: 25%;
+    }
+    .ba-width-xlarge-3-4 {
+        width: 75%;
+    }
+    /* Fifths */
+    .ba-width-xlarge-1-5 {
+        width: 20%;
+    }
+    .ba-width-xlarge-2-5 {
+        width: 40%;
+    }
+    .ba-width-xlarge-3-5 {
+        width: 60%;
+    }
+    .ba-width-xlarge-4-5 {
+        width: 80%;
+    }
+}
